trunk/Archive2/85/49d16af658581c/main.cpp
struct T1 {};
int main()
{
    const T1 nd;    //  error: const class type with implicit ctor
}